--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root{
+    --red: #d01c28;
+    --gray: #2e2e2e;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+    font-family: 'Poppins', sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button{
+    all:unset;
+    padding: 6px 16px;
+    background: var(--red);
+    height: 32px;
+    color: white;
+    font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    max-width: 1280px;
+    margin: 0 auto;
+    height: 72px;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul{
+    display: flex;
+    list-style: none;
+    gap: 24px;
+}
+
+
+.mbody{
+    display: flex;
+    max-width: 1280px;
+    margin: 60px auto;
+    height: calc(100vh-150px);
+    align-items: center;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    gap: 34px;
+}
+
+.mbody h1{
+    font-weight: 800;
+    font-size: 108px;
+    line-height: 102px;
+}
+
+.mbody p{
+    font-weight: 600;
+    color: var(--gray);
+    max-width: 400px;
+}
+
+.btn{
+    display: flex;
+    gap: 40px;
+}
+
+.sec-btn{
+    background: transparent;
+    color: var(--gray);
+    border: 1px solid gray;
+}
+
+.shop p{
+    font-size: 14px;
+    margin-bottom: 8px;
+}
+
+.brand-icons{
+    gap: 15px;
 }
